2005-04-21 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* HttpResponse.cs: only add the charset when explicitly set or for
	well-known content types.

2005-04-20 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* HttpCachePolicy.cs:
	* HttpAsyncResult.cs:
	* HttpClientCertificate.cs:
	* HttpException.cs:
	* HttpRuntime.cs:
	* HttpCacheVaryByHeaders.cs:
	* HttpBrowserCapabilities.cs:
	* HttpUtility.cs:
	* HttpCacheVaryByParams.cs: no more warnings.

	* QueueManager.cs: check for local connections with minLocalFreeThreads.

2005-04-19 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* ServerVariablesCollection.cs: shuffled variables, added missing ones
	and call a method in HttpRequest to set the HTTP_ variables.

	* HttpRequest.cs: new method to add HTTP_ variables to a collection.

2005-04-19 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* HttpRequest.cs: GetAllHeaders was returning the value twice instead
	of 'name: value'. When HTTP_ is requested on the output, don't include
	unknown headers.

2005-03-23 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* HttpCookieCollection.cs: when adding more than one cookie with the
	same name, the last one is the winner.

2005-03-09 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* HttpRequest.cs: correctly store the value cookies in Params. Fixes
	bug #73345.

2005-02-28 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* HttpRequest.cs: Path and FilePath also change when RewritePath is
	called. Fixes bug #73055.

2005-02-23  Sebastien Pouliot  <sebastien@ximian.com>

	* HttpRequest.cs: Make sure that any access after a ValidateInput 
	throws an exception if the data isn't safe.

2005-02-22 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* CapabilitiesLoader.cs: fix the path, as machine.config is now in a
	x.x/ directory below $PREFIX/etc/mono.

2005-02-22 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* HttpRequest.cs: fail on unicode full-width '<' and '>' too. Fixes