@@ -1,3 +1,7 @@
+2005-04-23 Gonzalo Paniagua Javier <gonzalo@ximian.com>
+
+	* HttpBrowserCapabilities.cs: fix Win32 property.
+
 2005-04-21 Gonzalo Paniagua Javier <gonzalo@ximian.com>
 
 	* HttpResponse.cs: only add the charset when explicitly set or for
